Mobile scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+ scrollbar-width: thin;
 }
 
 ::-webkit-scrollbar-track {
@@ -25,3 +25,4 @@ html, body {
 ::-webkit-scrollbar-thumb:hover {
   background: #555; 
 }
+
